fixed opinions